--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+apikey.txt
 
 # Created by https://www.gitignore.io/api/python,windows,pycharm,jupyternotebook
 # Edit at https://www.gitignore.io/?templates=python,windows,pycharm,jupyternotebook
